# Python项目依赖配置

[tool.poetry]
name = "crypto-ai-trader"
version = "1.0.0"
description = "生产级高频量化交易系统 - Hyperliquid AI Trader"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

# 数据处理和科学计算
numpy = "^1.26.2"
pandas = "^2.1.3"
polars = "^0.20"
scipy = "^1.10"

# 深度学习和机器学习
torch = "^2.0"
pytorch-lightning = "^2.0"
scikit-learn = "^1.3"
xgboost = "^2.0"

# 技术指标
ta-lib = "^0.4"
ta = "^0.10"
ccxt = "^4.0"

# 时间序列和回测
backtrader = "^1.9"
vectorbt = "^0.25"
yfinance = "^0.2"

# API和网络
requests = "^2.31"
aiohttp = "^3.9"
websocket-client = "^1.6"
websockets = "^12.0"

# Web框架
fastapi = "^0.104"
uvicorn = "^0.24"
pydantic = "^2.0"

# 数据库
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
redis = "^5.0"

# 监控和日志
prometheus-client = "^0.19"
python-logging-loki = "^0.3"

# 工具库
python-dotenv = "^1.0"
pyyaml = "^6.0"
click = "^8.1"
tqdm = "^4.66"

# 类型检查
mypy = "^1.7"
types-requests = "^2.31"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21"
pytest-benchmark = "^4.0"
black = "^23.12"
flake8 = "^6.1"
isort = "^5.13"
pylint = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
